fixed some options labels not fitting into container properly

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -109,7 +109,7 @@ body {
 .optionsInputsContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 600px;
+    width: 85%;
     margin: auto;
 }
 
